<resources>
    <string name="app_name">TaskFlow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_icon">Search Icon</string>
    <string name="notes">Notes</string>
    <string name="icon_image">Icon Image</string>
    <string name="title">Title</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="todo">Todo</string>
    <string name="note">Note</string>
    <string name="quote">Quote</string>
    <string name="quotes">Quotes</string>
    <string name="tasks">Tasks</string>
    <string name="lists">Lists</string>
    <string name="hyphen"> &#x20; -  &#x20;</string>
    <string name="add_group">Add Group</string>
    <string name="group_name">Group Name</string>
    <string name="groups">Groups</string>
    <string name="create_group">Create Group</string>
    <string name="new_task">New Task</string>
    <string name="task_details_optional">Task Details (Optional)</string>
    <string name="save">Save</string>
    <string name="set_date">Set Date</string>
    <string name="dd_mm_yy_optional">DD/MM/YY (Optional)</string>
    <string name="date_optional">Date (Optional)</string>
    <string name="toggle_completed">Toggle Completed</string>
    <string name="today_s_tasks">Today\'s Tasks</string>
    <string name="translate">Translate</string>
    <string name="from">From</string>
    <string name="to">To</string>
</resources>