<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/add_note_edittext_bg"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvAddGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/latoregular"
        android:text="@string/add_group"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="32sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAddGroupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddGroup"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/group_name"
        app:boxStrokeColor="@color/primarypurple"
        app:hintTextColor="@color/primarypurple"

        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopStart="16dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAddGroupName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddGroup"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"

        android:text="@string/create_group"
        android:textColor="@color/white"
        android:backgroundTint="@color/primarypurple"

        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/tilAddGroupName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>