<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.note.NoteFragment">

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/add_note_edittext_bg"
        android:fontFamily="@font/latoregular"
        android:hint="@string/search"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        android:textColor="?attr/colorOnPrimary"
        android:textColorHint="@color/grey_dark"
        android:textCursorDrawable="@null"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnSearch"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnSearch"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/search_icon"
        android:padding="4dp"
        android:src="@drawable/ic_search"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorSecondary" />

    <TextView
        android:id="@+id/tvGroupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/latoregular"
        android:text="@string/tasks"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSearch" />

    <LinearLayout
        android:id="@+id/taskDetailsLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"

        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGroupName">

        <TextView
            android:id="@+id/tvTotalTaskValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/latoregular"
            android:textColor="@color/grey_dark"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/latoregular"
            android:text="@string/hyphen"
            android:textColor="@color/grey_dark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvCompletedTaskValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/latoregular"
            android:textColor="@color/grey_dark"
            android:textSize="16sp" />

    </LinearLayout>

    <include
        android:id="@+id/layoutEmptyMessage"
        layout="@layout/empty_message_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskDetailsLL" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAllTasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskDetailsLL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:paddingBottom="144dp"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/btnAddTask"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="?attr/colorSecondary"
        android:elevation="8dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:contentDescription="@string/tasks"
            android:src="@drawable/ic_add_todo"
            app:tint="@color/white" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
